# gen3-validator

./: .gitignore  README.md  output_test.json  poetry_refresh_install.sh  pyproject.toml  requirements.txt  setup.py  testschema.json
.github/workflows/: build_test.yml  publish_pypi.yml  publish_testpypi.yml
data/fail/: medical_history.json  metabolomics_assay.json  metabolomics_file.json  sample.json  subject.json
data/lipid_fail/: lipidomics_assay.json  subject.json
data/lipid_pass/: lipidomics_assay.json  subject.json
docs/: README.md  classes.md  index.md  linkage.md  parsers.md  resolve_schema.md  tutorial_20250801.md  usage.md  validate.md
notebooks/: prototype.ipynb  testing.ipynb  testing.md  usage_output.ipynb
schema/: gen3_test_schema.json
src/gen3_data_validator/: __init__.py  linkage.py  logging_config.py  resolve_schema.py  resolve_schema_UML.txt  validate.py
src/gen3_data_validator/parsers/: parse_xlsx.py
tests/: regen_test_files.py
tests/data/data_maps/: fail_test_data_map.json  pass_test_data_map.json
tests/data/pass/: medical_history.json  metabolomics_assay.json  metabolomics_file.json  sample.json  subject.json
tests/gen3_data_validator/: test_linkage.py  test_parse_data.py  test_parse_xlsx.py  test_resolve_schema.py  test_validate.py
tests/gen3_validator/: test_linkage.py  test_parse_data.py  test_parse_xlsx.py  test_resolve_schema.py  test_validate.py
tests/gen3validator/: test_linkage.py  test_parse_data.py  test_parse_xlsx.py  test_resolve_schema.py  test_validate.py
tests/schema/: gen3_test_schema_resolved.json
